<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>

    <!-- Button Texts -->
    <string name="upcoming_button">Upcoming elections</string>
    <string name="representatives_button">Find my representatives</string>
    <string name="follow_button">Follow election</string>
    <string name="unfollow_button">Unfollow election</string>
    <string name="location_button">Use my location</string>

    <!-- Titles -->
    <string name="upcoming_title">Upcoming Elections</string>
    <string name="saved_title">Saved Elections</string>
    <string name="representative_search_title">Representative Search</string>
    <string name="my_representatives_title">My Representatives</string>
    <string name="election_information">Election Information</string>
    <string name="state_correspondence">State Correspondence</string>

    <!-- Texts -->
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="city">City</string>
    <string name="zip">Zip</string>
    <string name="voting_locations">Voting Locations</string>

    <!-- Messages -->
    <string name="voter_info_error">Unfortunately, details for this election are unavailable. Please choose a different one</string>

    <!-- Button texts-->
    <string name="follow_election">Follow Election</string>
    <string name="unfollow_election">Unfollow Election</string>

</resources>
