<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- Data binding node for Voter Info ViewModel -->
    <data>
        <variable
            name="viewModel"
            type="com.example.android.politicalpreparedness.election.VoterInfoViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.android.politicalpreparedness.MainActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/election_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_margin"
            android:singleLine="true"
            android:background="@color/colorPrimaryDark"
            app:title="@{viewModel.election.name}"
            app:layout_constraintTop_toTopOf="parent"
            app:titleTextColor="@color/white"/>

        <TextView
            android:id="@+id/election_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/big_margin"
            android:text="@{viewModel.election.electionDay.toString()}"
            app:layout_constraintTop_toBottomOf="@id/election_name"
            tools:text="12 November 2055" />

        <TextView
            android:id="@+id/state_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/election_information"
            app:layout_constraintTop_toBottomOf="@id/election_date"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/HeaderTextView"/>

        <TextView
            android:id="@+id/state_locations"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:onClick="@{() -> viewModel.onVotingLocationClick()}"
            app:layout_constraintTop_toBottomOf="@id/state_header"
            app:layout_constraintStart_toStartOf="@id/election_date"
            android:text="@string/voting_locations"
            android:layout_marginTop="@dimen/big_margin"
            android:gravity="center"
            style="@style/Buttons"/>

        <TextView
            android:id="@+id/state_ballot"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:onClick="@{() -> viewModel.onBallotInformationClick()}"
            app:layout_constraintTop_toBottomOf="@id/state_locations"
            app:layout_constraintStart_toStartOf="@id/election_date"
            android:text="Ballot Locations"
            android:layout_marginTop="@dimen/small_margin"
            android:gravity="center"
            style="@style/Buttons"/>

        <androidx.constraintlayout.widget.Group
            android:id="@+id/address_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="state_correspondence_header,address" />

        <TextView
            android:id="@+id/state_correspondence_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/state_correspondence"
            app:layout_constraintTop_toBottomOf="@id/state_ballot"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/HeaderTextView"/>

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/state_correspondence_header"
            app:layout_constraintStart_toStartOf="@id/election_date"
            android:layout_marginTop="@dimen/big_margin"
            tools:text="Address"/>
        <!--            android:text="@{viewModel.getAddress}"-->

        <Button
            android:id="@+id/follow_election_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/unfollow_election_button"
            android:onClick="@{() -> viewModel.followElection(viewModel.voterInfo.election)}"
            android:text="@string/follow_button"
            style="@style/Buttons"/>


        <Button
            android:id="@+id/unfollow_election_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewModel.unfollowElection(viewModel.voterInfo.election)}"
            android:text="@string/unfollow_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            style="@style/Buttons"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>